--- a/Reconnaissance_PlaqueImmac/Reconnaissance_PlaqueImmac/Reconnaissance_PlaqueImmac.vcxproj.filters
+++ b/Reconnaissance_PlaqueImmac/Reconnaissance_PlaqueImmac/Reconnaissance_PlaqueImmac.vcxproj.filters
@@ -35,5 +35,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="$(MSBuildThisFileDirectory)\..\x86\leptonica-1.82.0.dll" />
+    <None Include="$(MSBuildThisFileDirectory)\..\x86\tesseract50.dll" />
+    <None Include="$(MSBuildThisFileDirectory)\..\x64\leptonica-1.82.0.dll" />
+    <None Include="$(MSBuildThisFileDirectory)\..\x64\tesseract50.dll" />
   </ItemGroup>
 </Project>
